# router/auth_router.go
@@ -11,4 +11,7 @@ func RegisterAuthRoutes(api fiber.Router, h *handlers.AuthHandler) {
 	auth := api.Group("/auth")
 
 	auth.Post("/register", h.Register)
+	auth.Post("/login", h.Login)
+	auth.Post("/send-otp", h.SendOTP)
+	auth.Post("/verify-otp", h.VerifyOTP)
 }
